--- a/_includes/post.html
+++ b/_includes/post.html
@@ -19,7 +19,7 @@
 <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '{{page.url | prepend: site.url}}', // 可选。默认为 location.href
+  id: '{{page.url}}', // 可选。默认为 location.href
   owner: 'lihongzheshuai',
   repo: 'lihongzheshuai.github.io',
   oauth: {
