--- a/_includes/post.html
+++ b/_includes/post.html
@@ -16,10 +16,10 @@
   </div>
   <div id="container"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
+<script src="assets/js/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
-  id: '{{page.url}}', // 可选。默认为 location.href
+  id: '{{page.url | prepend: site.url}}', // 可选。默认为 location.href
   owner: 'lihongzheshuai',
   repo: 'lihongzheshuai.github.io',
   oauth: {
