--- a/_includes/post.html
+++ b/_includes/post.html
@@ -16,7 +16,7 @@
   </div>
   <div id="container"></div>
 <link rel="stylesheet" href="https://imsun.github.io/gitment/style/default.css">
-<script src="assets/js/gitment.browser.js"></script>
+<script src="/assets/js/gitment.browser.js"></script>
 <script>
 var gitment = new Gitment({
   id: '{{page.url | prepend: site.url}}', // 可选。默认为 location.href
