--- a/_includes/post.html
+++ b/_includes/post.html
@@ -22,7 +22,10 @@
         new Valine({
             el: '#vcomments',
             appId: 'DDrFLaVPmPSKiXNMnTcmKO07-gzGzoHsz',
-            appKey: '5kQM5NK9V8n9aFBO5rjl43TP'
+            appKey: '5kQM5NK9V8n9aFBO5rjl43TP',
+            recordIP: true,
+            visitor: true
+
         })
     </script>
 {% endif %}
