--- a/_includes/post.html
+++ b/_includes/post.html
@@ -16,7 +16,7 @@
   </div>
   {% if page.comments %}
   <div id="container"></div>
-<script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+<script src='/assets/js/Valine.min.js'></script>
  <div id="vcomments"></div>
     <script>
         new Valine({
