--- a/_includes/post.html
+++ b/_includes/post.html
@@ -15,18 +15,20 @@
 	  
   </div>
   {% if page.comments %}
-  <div id="container"></div>
-<script src='/assets/js/Valine.min.js'></script>
- <div id="vcomments"></div>
-    <script>
-        new Valine({
-            el: '#vcomments',
-            appId: 'DDrFLaVPmPSKiXNMnTcmKO07-gzGzoHsz',
-            appKey: '5kQM5NK9V8n9aFBO5rjl43TP',
-            recordIP: true,
-            visitor: true
-
-        })
-    </script>
+<script src="https://giscus.app/client.js"
+        data-repo="lihongzheshuai/lihongzheshuai.github.io"
+        data-repo-id="27068021"
+        data-category="General"
+        data-category-id="OneCoderPostComme"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
 {% endif %}
 </div>
