--- a/_includes/post.html
+++ b/_includes/post.html
@@ -17,15 +17,15 @@
   {% if page.comments %}
 <script src="https://giscus.app/client.js"
         data-repo="lihongzheshuai/lihongzheshuai.github.io"
-        data-repo-id="27068021"
+        data-repo-id="MDEwOlJlcG9zaXRvcnkyNzA2ODAyMQ=="
         data-category="General"
-        data-category-id="OneCoderPostComme"
+        data-category-id="DIC_kwDOAZ0Gdc4CROQ1"
         data-mapping="pathname"
         data-strict="0"
         data-reactions-enabled="1"
         data-emit-metadata="0"
         data-input-position="bottom"
-        data-theme="preferred_color_scheme"
+        data-theme="light"
         data-lang="zh-CN"
         crossorigin="anonymous"
         async>
