--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -200,7 +200,7 @@
              </span>
           {% endif %}
 
-          {% if site.busuanzi_count.enable and site.busuanzi_count.page_pv and is_index == false or is_index == nil%}
+          {% if site.busuanzi_count.enable and site.busuanzi_count.page_pv%}
             <span class="post-meta-divider">|</span>
             <span class="page-pv">{{ site.busuanzi_count.page_pv_header }}
             <span class="busuanzi-value" id="busuanzi_value_page_pv" ></span>{{ site.busuanzi_count.page_pv_footer }}
