--- a/_includes/_partials/head.html
+++ b/_includes/_partials/head.html
@@ -2,6 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 <meta name="google-adsense-account" content="ca-pub-7615326632728696">
+<meta name="baidu-site-verification" content="vYBRPWoh8L" />
 
 
 {% if site.pace %}
