--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -315,6 +315,17 @@
           {% endif %}
         {% endif %}
       {% else %}
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
+      crossorigin="anonymous"></script>
+ <ins class="adsbygoogle"
+      style="display:block; text-align:center;"
+      data-ad-layout="in-article"
+      data-ad-format="fluid"
+      data-ad-client="ca-pub-7615326632728696"
+      data-ad-slot="1669039692"></ins>
+ <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+ </script>
         {{ post.content }}
       {% endif  %}
     </div>
