add qq group link to post.html

--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -255,7 +255,6 @@
     {% endunless %}
 
     <div class="post-body{% if site.han %} han-init-context{% endif %}" itemprop="articleBody">
-
       {% comment %} Gallery support {% endcomment %}
       {% if post.photos and post.photos.size > 0 %}
         <div class="post-gallery" itemscope itemtype="http://schema.org/ImageGallery">
@@ -326,6 +325,7 @@
       <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
+      <div><a href="https://qm.qq.com/q/bveoRTWURG" style="font-size: larger; font-weight: bold; color: #4a6de7;">点击链接加入群聊【Java学习交流(982860385)】</a></div>
         {{ post.content }}
       {% endif  %}
     </div>
