--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -325,11 +325,19 @@
       <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
-      <div><a href="https://qm.qq.com/q/bveoRTWURG" style="font-size: larger; font-weight: bold; color: #4a6de7;">点击链接加入群聊【Java学习交流(982860385)】</a></div>
+        {% if site.qq.add_group_url %}
+        <div><a href="{{site.qq.add_group_url}}" style="font-size: larger; font-weight: bold; color: #4a6de7;">交流探讨，加入群聊【Java学习交流(982860385)】</a></div>
+        {% endif  %}
         {{ post.content }}
       {% endif  %}
     </div>
-
+    <div style="margin:20px auto;text-align: center;">
+      {% if is_index == nil or is_index == false and site.qq.add_group_url %}
+        <img src="{{site.qq.group_qr_code}}" style="width: 300px;height: 400px;"/>
+        <a href="{{site.qq.add_group_url}}" style="font-size: large; font-weight: bold; color: #4a6de7;">加入群聊【Java学习交流(982860385)】</a>
+      {% endif %}
+    </div>
+    
     <div>
       {% unless is_index %}
         {% include _macro/wechat-subscriber.html %}
