change code style

--- a/_sass/_common/components/highlight/highlight.scss
+++ b/_sass/_common/components/highlight/highlight.scss
@@ -23,6 +23,7 @@ code {
   background: $code-background;
   border-radius: $code-border-radius;
   font-size: $code-font-size;
+  font-weight: $code-font-weight;
 }
 
 pre {
