--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -145,7 +145,7 @@ $code-font-family               : $font-family-monospace;
 $code-font-size                 : 14px;
 $code-font-size                 : if(type-of(jekyll-config('font.codes.size')) == 'number', jekyll-config('font.codes.size') + px, $code-font-size);
 $code-border-radius             : 3px;
-$code-foreground                : $black-light;
+$code-foreground                : $code-font-color;
 $code-background                : $gainsboro;
 
 
