fix code font color

--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -23,7 +23,7 @@ $blue-bright  : #87daff;
 $blue         : #0684bd;
 $blue-deep    : #262a30;
 $orange       : #fc6423;
-$code-font-color: rgb(252, 100, 35);
+$code-font-color: $blue;
 
 
 // Scaffolding
