--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -142,12 +142,12 @@ $table-row-hover-bg-color       : $whitesmoke;
 // Code & Code Blocks
 // --------------------------------------------------
 $code-font-family               : $font-family-monospace;
-$code-font-size                 : 14px;
+$code-font-size                 : 16px;
 $code-font-size                 : if(type-of(jekyll-config('font.codes.size')) == 'number', jekyll-config('font.codes.size') + px, $code-font-size);
 $code-border-radius             : 3px;
 $code-foreground                : $code-font-color;
 $code-background                : $gainsboro;
-$code-font-weight               : bolder;
+$code-font-weight               : normal;
 
 
 
