add related posts function

--- a/_includes/_macro/post.html
+++ b/_includes/_macro/post.html
@@ -325,9 +325,6 @@
       <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
       </script>
-        {% if site.qq.add_group_url %}
-        <div><a href="{{site.qq.add_group_url}}" style="font-size: larger; font-weight: bold; color: #4a6de7;">交流探讨，加入群聊【Java学习交流(982860385)】</a></div>
-        {% endif %}
         {{ post.content }}
         {% if site.qq.add_group_url %}
         <div><a href="{{site.qq.add_group_url}}" style="font-size: larger; font-weight: bold; color: #4a6de7;">交流探讨，加入群聊【Java学习交流(982860385)】</a></div>
@@ -360,6 +357,13 @@
         {% include _macro/post-copyright.html %}
       {% endunless %}
     </div>
+
+    <div>
+      {% unless is_index %}
+        {% include _macro/post-recommended.html %}
+      {% endunless %}
+    </div>
+    
 
     <footer class="post-footer">
       {% if post.tags and post.tags.size != 0 and is_index == nil or is_index == false %}
