change heading bold font style

--- a/_sass/_common/components/post/post-title.scss
+++ b/_sass/_common/components/post/post-title.scss
@@ -1,5 +1,5 @@
 .posts-expand .post-title {
-  font-size: 26px;
+  font-size: $font-size-headings-base;
   text-align: center;
   word-break: break-word;
   font-weight: $posts-expand-title-font-weight;
@@ -11,10 +11,12 @@
 .posts-expand .post-title-link {
   display: inline-block;
   position: relative;
-  color: $black-light;
+  color: $heading-color;
   border-bottom: none;
   line-height: 1.2;
   vertical-align: top;
+  font-weight: $posts-expand-title-font-weight;
+  font-size: $font-size-headings-base;
 
   &::before {
     content: "";
