--- a/_sass/_common/scaffolding/base.scss
+++ b/_sass/_common/scaffolding/base.scss
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
   line-height: 1.5;
   font-family: $font-family-headings;
-  color: #092a9c;
+  color: $heading-color;
 }
 
 h2, h3, h4, h5, h6 { margin: 20px 0 15px; }
