--- a/_sass/_variables/base.scss
+++ b/_sass/_variables/base.scss
@@ -24,6 +24,7 @@ $blue         : #0684bd;
 $blue-deep    : #262a30;
 $orange       : #fc6423;
 $code-font-color: $blue;
+$heading-color: #092a9c;
 
 
 // Scaffolding
@@ -100,7 +101,7 @@ $font-size-larger         : $font-size-base + 4px;
 
 // Headings font size
 $font-size-headings-step    : 2px;
-$font-size-headings-base    : 24px;
+$font-size-headings-base    : 30px;
 $font-size-headings-small   : $font-size-headings-base - $font-size-headings-step;
 $font-size-headings-smaller : $font-size-headings-small - $font-size-headings-step;
 $font-size-headings-large   : $font-size-headings-base + $font-size-headings-step;
@@ -239,7 +240,7 @@ $menu-link-hover-border         : $black-deep;
 
 // Posts Expand
 // --------------------------------------------------
-$posts-expand-title-font-weight : $font-weight-normal;
+$posts-expand-title-font-weight : 600;
 $post-copyright : (
   margin: 2em 0 0,
   padding: .5em 1em,
