--- a/_includes/js-selector.html
+++ b/_includes/js-selector.html
@@ -90,7 +90,7 @@
   {% include mermaid.html %}
 {% endif %}
 
-{% if jekyll.environment == 'production' %}
+{% if site.environment == 'production' %}
   <!-- PWA -->
   {% if site.pwa.enabled %}
     <script defer src="{{ 'app.min.js' | prepend: js_dist | relative_url }}"></script>
