fix gitignore and add google ads

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -105,5 +105,10 @@
 
   {% include metadata-hook.html %}
 
+  <!-- by OneCoder include custom code -->
   {% include custom-js.html %}
+
+  {% if page.layout == 'post' %}
+    {% include custom-post-js.html %}
+  {% endif %}
 </head>
