--- a/_includes/custom-js.html
+++ b/_includes/custom-js.html
@@ -8,4 +8,17 @@
       s.parentNode.insertBefore(hm, s);
     })();
 </script>
-    
+
+<!-- Google Ads All -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
+crossorigin="anonymous"></script>
+<!-- all-site -->
+<ins class="adsbygoogle"
+style="display:block"
+data-ad-client="ca-pub-7615326632728696"
+data-ad-slot="6734143049"
+data-ad-format="auto"
+data-full-width-responsive="true"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
