remove google ads

--- a/_includes/custom-js.html
+++ b/_includes/custom-js.html
@@ -9,10 +9,10 @@
     })();
 </script>
 
-<!-- Google Ads All -->
+<!-- Google Ads All 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
 crossorigin="anonymous"></script>
-<!-- all-site -->
+ all-site 
 <ins class="adsbygoogle"
 style="display:block"
 data-ad-client="ca-pub-7615326632728696"
@@ -22,3 +22,4 @@ data-full-width-responsive="true"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+-->
