--- a/_includes/custom-post-js.html
+++ b/_includes/custom-post-js.html
@@ -1,4 +1,4 @@
-<!-- Google ads in post -->
+<!-- Google ads in post 
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
 crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -10,3 +10,4 @@ data-ad-slot="1669039692"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+-->
