and google ads pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -106,9 +106,9 @@
   {% include metadata-hook.html %}
 
   <!-- by OneCoder include custom code -->
-  {% include custom-js.html %}
+  {% include custom/custom-js.html %}
 
   {% if page.layout == 'post' %}
-    {% include custom-post-js.html %}
+    {% include custom/custom-post-js.html %}
   {% endif %}
 </head>
