fix google ads style

--- a/_includes/custom/custom-post-google-ads-sidebar.html
+++ b/_includes/custom/custom-post-google-ads-sidebar.html
@@ -1,5 +1,5 @@
 <!-- Google ads in post sidebar --> 
-<section class="d-none ps-0 pe-4">
+<div style="position: sticky;">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
      crossorigin="anonymous"></script>
 <!-- all-site -->
@@ -12,4 +12,4 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</section>
+</div>
