fix google ads style

--- a/_includes/custom/custom-post-google-ads-sidebar.html
+++ b/_includes/custom/custom-post-google-ads-sidebar.html
@@ -1,5 +1,5 @@
 <!-- Google ads in post sidebar --> 
-<div style="position: sticky;">
+<div style="margin-top: 10px;">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
      crossorigin="anonymous"></script>
 <!-- all-site -->
