--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 refactor: true
 panel_includes:
   - toc
-  - custom/custom-post-google-ads-sidebar
+  <!-- - custom/custom-post-google-ads-sidebar -->
 tail_includes:
   - related-posts
   - post-nav
