--- a/_includes/toc.html
+++ b/_includes/toc.html
@@ -10,4 +10,19 @@
     <h2 class="panel-heading ps-3 mb-2">{{- site.data.locales[include.lang].panel.toc -}}</h2>
     <nav id="toc"></nav>
   </section>
+  <!-- Google ads in post sidebar --> 
+<div style="margin-top: 10px;">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
+       crossorigin="anonymous"></script>
+  <!-- all-site -->
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-client="ca-pub-7615326632728696"
+       data-ad-slot="6734143049"
+       data-ad-format="auto"
+       data-full-width-responsive="true"></ins>
+  <script>
+       (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  </div>
 {% endif %}
