fix google ads style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,7 +110,7 @@ panel_includes:
     </article>
     {% if loop.index == 1 %}
     <!-- 这是第一次循环 -->
-    {% include custom/custom-info-google-ads.html }
+    {% include custom/custom-info-google-ads.html %}
     {% else %}
   {% endfor %}
 </div>
