fix google ads style

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -111,7 +111,7 @@ panel_includes:
     {% if loop.index == 1 %}
     <!-- 这是第一次循环 -->
     {% include custom/custom-info-google-ads.html %}
-    {% else %}
+    {% endif %}
   {% endfor %}
 </div>
 <!-- #post-list -->
