--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -108,6 +108,13 @@ panel_includes:
         </div>
       </a>
     </article>
+    <!-- add google ads -->
+    {% if forloop.first %}    
+    <!-- first loop -->
+    <article class="card-wrapper card">
+      {% include custom/custom-info-google-ads.html %}
+    </article>
+    {% endif %}
   {% endfor %}
 </div>
 <!-- #post-list -->
