change google info ads

--- a/_includes/custom/custom-info-google-ads.html
+++ b/_includes/custom/custom-info-google-ads.html
@@ -1,3 +1,4 @@
+<article class="card-wrapper card">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
      crossorigin="anonymous"></script>
 <ins class="adsbygoogle"
@@ -9,3 +10,4 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</article>
