--- a/_includes/custom/custom-post-content-after.html
+++ b/_includes/custom/custom-post-content-after.html
@@ -1,3 +1,17 @@
+<div style="margin-bottom: 20px;">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
+     crossorigin="anonymous"></script>
+<!-- content-footer -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7615326632728696"
+     data-ad-slot="6416549436"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
 <!-- 插入QQ群加群链接 -->
 <p style="text-align: center;">
     <a href="https://qm.qq.com/q/gKhDy9QkTK" style="font-weight: bold; color: #030303;">交流探讨，加入群聊【Java一起学高级群(982860385)】</a>
