--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -42,20 +42,29 @@ body {
     @extend %heading;
 
     @if $i > 1 {
-      @extend %section;
       @extend %anchor;
     }
 
     @if $i < 5 {
-      $factor: 0.18rem;
+      $size-factor: 0.25rem;
 
-      @if $i == 1 {
-        $factor: 0.23rem;
+      @if $i > 1 {
+        $size-factor: 0.18rem;
+
+        main & {
+          @if $i == 2 {
+            margin: 2.5rem 0 1.25rem;
+          } @else {
+            margin: 2rem 0 1rem;
+          }
+        }
       }
 
-      font-size: 1rem + (5 - $i) * $factor;
+      & {
+        font-size: 1rem + (5 - $i) * $size-factor;
+      }
     } @else {
-      font-size: 1rem;
+      font-size: 1.05rem;
     }
   }
 }
@@ -80,9 +89,10 @@ img {
 }
 
 blockquote {
-  border-left: 5px solid var(--blockquote-border-color);
+  border-left: 0.125rem solid var(--blockquote-border-color);
   padding-left: 1rem;
   color: var(--blockquote-text-color);
+  margin-top: 0.5rem;
 
   > p:last-child {
     margin-bottom: 0;
@@ -114,7 +124,7 @@ blockquote {
 }
 
 kbd {
-  font-family: inherit;
+  font-family: Lato, sans-serif;
   display: inline-block;
   vertical-align: middle;
   line-height: 1.3rem;
@@ -124,7 +134,7 @@ kbd {
   padding-top: 0.1rem;
   color: var(--kbd-text-color);
   background-color: var(--kbd-bg-color);
-  border-radius: 0.25rem;
+  border-radius: $radius-sm;
   border: solid 1px var(--kbd-wrap-color);
   box-shadow: inset 0 -2px 0 var(--kbd-wrap-color);
 }
@@ -327,8 +337,8 @@ sup {
 
   img {
     height: 100%;
-    -o-object-fit: fill;
-    object-fit: fill;
+    -o-object-fit: cover;
+    object-fit: cover;
 
     @extend %rounded;
 
