change qq group channel info

--- a/_includes/custom/custom-post-content-after.html
+++ b/_includes/custom/custom-post-content-after.html
@@ -7,7 +7,7 @@
          <article class="col">
            <a href="https://qm.qq.com/q/ls4zxnEXXW" class="post-preview card h-100">
              <div class="card-body">
-               <h4 class="pt-0 my-2">Java技术交流群</h4>
+               <h4 class="pt-0 my-2">Java、C++、Python技术交流群</h4>
                <div class="text-muted">
                  <p>群号：982860385。大佬免费带队，成员技术水平高，活跃、热心</p>
                </div>
@@ -27,9 +27,9 @@
         <article class="col">
           <a href="https://pd.qq.com/s/1gsdm3gdn" class="post-preview card h-100">
             <div class="card-body">
-              <h4 class="pt-0 my-2">GESP、CSJ认证频道</h4>
+              <h4 class="pt-0 my-2">C++ GESP认证学习频道</h4>
               <div class="text-muted">
-                <p>新建GESP考级认证频道，记录与孩子共同成长过程</p>
+                <p>C++ GESP考级认证学习频道，记录从零开始学习成长过程</p>
               </div>
             </div>
           </a>
