--- a/_includes/custom/custom-post-content-after.html
+++ b/_includes/custom/custom-post-content-after.html
@@ -1,13 +1,13 @@
 <div>
 <aside id="related-posts" aria-labelledby="related-label">
-     <h3 class="mb-4" id="related-label">
-       热烈招募
+     <h3 class="mb-4" id="related-label" style="color: forestgreen;">
+       欢迎加入
      </h3>
      <nav class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4 mb-4">
          <article class="col">
            <a href="https://qm.qq.com/q/ls4zxnEXXW" class="post-preview card h-100">
              <div class="card-body">
-               <h4 class="pt-0 my-2">Java、C++、Python技术交流群</h4>
+               <h4 class="pt-0 my-2" style="color: forestgreen;">Java、C++、Python技术交流群</h4>
                <div class="text-muted">
                  <p>群号：982860385。大佬免费带队，成员技术水平高，活跃、热心</p>
                </div>
@@ -17,7 +17,7 @@
          <article class="col">
           <a href="https://pd.qq.com/s/dzb1xn6cd" class="post-preview card h-100">
             <div class="card-body">
-              <h4 class="pt-0 my-2">Java学习频道</h4>
+              <h4 class="pt-0 my-2" style="color: forestgreen;">Java学习频道</h4>
               <div class="text-muted">
                 <p>免费获取Java学习资源，知识沉淀，面试问答，习题联系，每日更新</p>
               </div>
@@ -27,7 +27,7 @@
         <article class="col">
           <a href="https://pd.qq.com/s/1gsdm3gdn" class="post-preview card h-100">
             <div class="card-body">
-              <h4 class="pt-0 my-2">C++ GESP认证学习频道</h4>
+              <h4 class="pt-0 my-2" style="color: forestgreen;">C++ GESP认证学习频道</h4>
               <div class="text-muted">
                 <p>C++ GESP考级认证学习频道，记录从零开始学习成长过程</p>
               </div>
