--- a/_includes/custom/custom-post-content-after.html
+++ b/_includes/custom/custom-post-content-after.html
@@ -1,8 +1,8 @@
 <div>
 <aside id="related-posts" aria-labelledby="related-label">
-     <h3 class="mb-4" id="related-label" style="color: forestgreen;">
+     <!-- <h3 class="mb-4" id="related-label" style="color: forestgreen;">
        欢迎加入
-     </h3>
+     </h3> -->
      <nav class="row row-cols-1 row-cols-md-2 row-cols-xl-3 g-4 mb-4">
          <article class="col">
            <a href="https://qm.qq.com/q/ls4zxnEXXW" class="post-preview card h-100">
