--- a/_includes/custom/custom-post-content-after.html
+++ b/_includes/custom/custom-post-content-after.html
@@ -37,13 +37,14 @@
     </nav>
   </aside>
 </div> -->
+<!-- 20250726 临时关闭ontent-footer广告 
 <div style="margin-bottom: 20px;">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7615326632728696"
     crossorigin="anonymous"></script>
-  <!-- content-footer -->
   <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7615326632728696" data-ad-slot="6416549436"
     data-ad-format="auto" data-full-width-responsive="true"></ins>
   <script>
     (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
 </div>
+-->
