new post gesp-5-4

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,8 +99,9 @@ tail_includes:
     <!-- by OneCoder -->
     {% include custom/custom-post-content-before.html lang=lang %}
     {{ content }}
-    <!-- by OneCoder -->
+    <!-- by OneCoder 
     {% include custom/custom-post-content-after.html lang=lang %}
+    -->
   </div>
 
 
