--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -99,9 +99,8 @@ tail_includes:
     <!-- by OneCoder -->
     {% include custom/custom-post-content-before.html lang=lang %}
     {{ content }}
-    <!-- by OneCoder 
-    {% include custom/custom-post-content-after.html lang=lang %}
-    -->
+    <!-- by OneCoder -->
+    <!-- {% include custom/custom-post-content-after.html lang=lang %} -->
   </div>
 
 
