--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -8,3 +8,24 @@
 ';
 
 /* append your custom style below */
+
+h2 {
+    font-size: 1.54rem;
+    color: #9d192a;
+}
+
+h3 {
+    font-size: 1.36rem;
+    color: #0550ae;
+}
+
+h4 {
+    font-size: 1.18rem;
+    color: #c87619;
+}
+
+h5 {
+    font-size: 1.05rem;
+    font-weight: bold;
+    font-style: italic;
+}
